@@ -17,12 +17,12 @@ class ExN04StackingAction : public G4UserStackingAction
 {
   public:
     ExN04StackingAction();
-    ~ExN04StackingAction();
+    virtual ~ExN04StackingAction();
 
   public:
-    G4ClassificationOfNewTrack ClassifyNewTrack(G4Track *const aTrack);
-    void NewStage();
-    void PrepareNewEvent();
+    virtual G4ClassificationOfNewTrack ClassifyNewTrack(const G4Track* aTrack);
+    virtual void NewStage();
+    virtual void PrepareNewEvent();
 
   private:
     G4bool InsideRoI(G4Track *const aTrack,G4double ang);
