@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: ExN04PhysicsList.cc,v 1.2 1999-03-24 10:42:57 kurasige Exp $
+// $Id: ExN04PhysicsList.cc,v 1.3 1999-04-16 11:35:18 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -19,6 +19,12 @@
 #include "G4ProcessVector.hh"
 #include "G4ParticleTypes.hh"
 #include "G4ParticleTable.hh"
+#include "G4BosonConstructor.hh"
+#include "G4LeptonConstructor.hh"
+#include "G4MesonConstructor.hh"
+#include "G4BarionConstructor.hh"
+#include "G4IonConstructor.hh"
+#include "G4ShortLivedConstructor.hh"
 #include "G4Material.hh"
 #include "G4MaterialTable.hh"
 #include "G4ios.hh"
@@ -45,7 +51,12 @@ void ExN04PhysicsList::ConstructParticle()
   // created in the program. 
 
   // create all particles
-  ConstructAllParticles();
+  ConstructAllBosons();
+  ConstructAllLeptons();
+  ConstructAllMesons();
+  ConstructAllBarions();
+  ConstructAllIons();
+  ConstructAllShortLiveds();
 }
 
 void ExN04PhysicsList::ConstructProcess()
@@ -643,27 +654,52 @@ void ExN04PhysicsList::AddParameterisation()
   }
 }
 
-void ExN04PhysicsList::SetCuts(G4double cut)
+void ExN04PhysicsList::SetCuts()
 {
-  if (verboseLevel >0){
-    G4cout << "ExN04PhysicsList::SetCuts:";
-    G4cout << "CutLength : " << cut/mm << " (mm)" << endl;
-  }  
-
-  // set cut values for gamma at first and for e- second and next for e+,
-  // because some processes for e+/e- need cut values for gamma 
-  SetCutValue(cut, "gamma");
-  SetCutValue(cut, "e-");
-  SetCutValue(cut, "e+");
- 
-  // set cut values for proton and anti_proton before all other hadrons
-  // because some processes for hadrons need cut values for proton/anti_proton 
-  SetCutValue(cut, "proton");
-  SetCutValue(cut, "anti_proton");
-  
-  SetCutValueForOthers(cut);
-
-  if (verboseLevel>1) {
-    DumpCutValuesTable();
-  }
+  //  " G4VUserPhysicsList::SetCutsWithDefault" method sets 
+  //   the default cut value for all particle types 
+  SetCutsWithDefault();   
 }
+
+void ExN04PhysicsList::ConstructAllBosons()
+{
+  // Construct all bosons
+  G4BosonConstructor pConstructor;
+  pConstructor.ConstructParticle();
+}
+
+void ExN04PhysicsList::ConstructAllLeptons()
+{
+  // Construct all leptons
+  G4LeptonConstructor pConstructor;
+  pConstructor.ConstructParticle();
+}
+
+void ExN04PhysicsList::ConstructAllMesons()
+{
+  //  Construct all mesons
+  G4MesonConstructor pConstructor;
+  pConstructor.ConstructParticle();
+}
+
+void ExN04PhysicsList::ConstructAllBarions()
+{
+  //  Construct all barions
+  G4BarionConstructor pConstructor;
+  pConstructor.ConstructParticle();
+}
+
+void ExN04PhysicsList::ConstructAllIons()
+{
+  //  Construct light ions
+  G4IonConstructor pConstructor;
+  pConstructor.ConstructParticle();  
+}
+
+void ExN04PhysicsList::ConstructAllShortLiveds()
+{
+  //  Construct  resonaces and quarks
+  G4ShortLivedConstructor pConstructor;
+  pConstructor.ConstructParticle();  
+}
+
