@@ -15,10 +15,9 @@ ExN04SteppingAction::ExN04SteppingAction()
 ExN04SteppingAction::~ExN04SteppingAction()
 {;}
 
-void ExN04SteppingAction::UserSteppingAction()
+void ExN04SteppingAction::UserSteppingAction(const G4Step * theStep)
 {
-  G4SteppingManager * SM = GetOmnipotentSteppingManager();
-  G4Step * theStep = SM->GetStep();
+  G4SteppingManager * SM = fpSteppingManager;
   G4Track * theTrack = theStep->GetTrack();
 
   // check if it is alive
