@@ -1,4 +1,4 @@
-$Id: History,v 1.1 1999-01-07 16:05:59 gunter Exp $
+$Id: History,v 1.2 1999-04-16 11:35:11 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,7 +14,12 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+16th April 1999 H.Kurashige
+- modify ExN04RunAction ExN04StackingAction ExN04SteppingAction ExN04TrackingAction
+- modify ExN04PhysicsList::SetCuts
+- modify ExN04PhysicsList::ConstructParticle
 
+ 
 21st November 1998  John Allison
 - Made ExN04Field compatible with G4Field.
 
